Re-enable location

--- a/themes/jsonresume-theme-stackoverflow/theme/partials/work.hbs
+++ b/themes/jsonresume-theme-stackoverflow/theme/partials/work.hbs
@@ -38,7 +38,7 @@
             {{/if}}
           {{/if}}
 				</div>
-        {{!-- {{#location}}
+        {{#location}}
         <span class="location">
           <span class="fas fa-map-marker-alt"></span> 
           {{#if city}}
@@ -51,7 +51,7 @@
           <span class="region">{{region}}</span> 
           {{/if}}
         </span>
-	      {{/location}}  --}}
+	      {{/location}}
 			</header>
 			{{/if}}
 
