--- a/themes/jsonresume-theme-stackoverflow/theme/partials/work.hbs
+++ b/themes/jsonresume-theme-stackoverflow/theme/partials/work.hbs
@@ -21,37 +21,39 @@
           <a target="_blank" href="{{website}}">{{company}}</a>
         </span>
         {{/if}}
-				<div class="date">
-          {{!-- {{#if startDate}}
-				  <span class="startDate">{{MY startDate}}</span> 
-          {{/if}}
-          {{#if endDate}}
-					<span class="endDate">- {{MY endDate}}</span> 
-          {{else}}
-					<span class="endDate">- Current</span>
-          {{/if}} --}}
-          {{#if startDate}}
-            {{#if dateFormat}}
-            <span class="startDate">{{smartDate startDate endDate dateFormat "-"}}</span>
-            {{else}}
-            <span class="startDate">{{smartDate startDate endDate "MMM YYYY" "-"}}</span>
+        <div class="work-metadata">
+          <div class="date">
+            {{!-- {{#if startDate}}
+            <span class="startDate">{{MY startDate}}</span> 
             {{/if}}
-          {{/if}}
-				</div>
-        {{#location}}
-        <span class="location">
-          <span class="fas fa-map-marker-alt"></span> 
-          {{#if city}}
-          <span class="city">{{city}},</span>
-          {{/if}} 
-          {{#if countryCode}}
-          <span class="countryCode">({{countryCode}})</span> 
-          {{/if}} 
-          {{#if region}}
-          <span class="region">{{region}}</span> 
-          {{/if}}
-        </span>
-	      {{/location}}
+            {{#if endDate}}
+            <span class="endDate">- {{MY endDate}}</span> 
+            {{else}}
+            <span class="endDate">- Current</span>
+            {{/if}} --}}
+            {{#if startDate}}
+              {{#if dateFormat}}
+              <span class="startDate">{{smartDate startDate endDate dateFormat "-"}}</span>
+              {{else}}
+              <span class="startDate">{{smartDate startDate endDate "MMM YYYY" "-"}}</span>
+              {{/if}}
+            {{/if}}
+          </div>
+          {{#location}}
+          <span class="location">
+            <span class="fas fa-map-marker-alt"></span> 
+            {{#if city}}
+            <span class="city">{{city}},</span>
+            {{/if}} 
+            {{#if countryCode}}
+            <span class="countryCode">({{countryCode}})</span> 
+            {{/if}} 
+            {{#if region}}
+            <span class="region">{{region}}</span> 
+            {{/if}}
+          </span>
+          {{/location}}
+        </div>
 			</header>
 			{{/if}}
 
