--- a/themes/jsonresume-theme-stackoverflow/theme/partials/basics.hbs
+++ b/themes/jsonresume-theme-stackoverflow/theme/partials/basics.hbs
@@ -8,8 +8,7 @@
 		</div>
 		{{else}}
 		<div>
-			<h1 class="name">{{name}}</h1>
-			<h2 class="label">{{label}}</h2>
+			<span class="name">{{name}}</span><span class="label">, {{label}}</span>
 		</div>
 		{{/if}}
 
@@ -37,12 +36,6 @@
 		{{/birthDate}}
 
 		<div id="contact">
-			{{#if website}}
-			<div class="website">
-				<span class="fas fa-external-link-alt"></span>
-				<a target="_blank" target="_blank" href="{{website}}">{{website}}</a>
-			</div>
-			{{/if}}
 			{{#if email}}
 			<div class="email">
 				<span class="far fa-envelope"></span>
@@ -55,9 +48,33 @@
 				<a href="tel:{{phone}}">{{phone}}</a>
 			</div>
 			{{/if}}
+
+			{{#if website}}
+			<div class="website">
+				<span class="fas fa-external-link-alt"></span>
+				<a target="_blank" target="_blank" href="{{website}}">{{linkFormat website}}</a>
+			</div>
+			{{/if}}
+
+			{{#each profiles}}
+			<div class="item">
+				{{#if network}}
+				<div class="username">
+					<span class="fab fa-{{spaceToDash network}} {{spaceToDash network}} social"></span>
+					{{#if url}}
+					<span class="url">
+						<a target="_blank" href="{{url}}">{{username}}</a>
+					</span>
+					{{else}}
+					<span>{{username}}</span>
+					{{/if}}
+				</div>
+				{{/if}}
+			</div>
+			{{/each}}
 		</div>
 
-		{{#if profiles.length}}
+		{{!-- {{#if profiles.length}}
 		<div id="profiles">
 			{{#each profiles}}
 			<div class="item">
@@ -76,7 +93,7 @@
 			</div>
 			{{/each}}
 		</div>
-		{{/if}}
+		{{/if}} --}}
 	</header>
 
 	{{#if summary}}
